--- a/Cap02_Ex01/Cap02_Ex01.csproj
+++ b/Cap02_Ex01/Cap02_Ex01.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{EB58C7DA-FA7B-4586-B6CE-937C582D3880}</ProjectGuid>
+    <ProjectGuid>{01A0FC85-5EB2-4BDD-83C6-386613DCCE52}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>aprendendocsharp</RootNamespace>
-    <AssemblyName>aprendendocsharp</AssemblyName>
+    <RootNamespace>Cap02_Ex01</RootNamespace>
+    <AssemblyName>Cap02_Ex01</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,9 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="TextFile1.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
